--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,7 +13,7 @@
         <header class="header">
             <div class="logo">
                 <span class="logo-icon"></span>
-                <h1>LEMONADE support bot.
+                <h1>LEMONADE support bot
                     
                 </h1>
             </div>
